[gd_scene load_steps=2 format=3 uid="uid://b7sb48vkewfgu"]

[ext_resource type="Script" uid="uid://2wi6qqyspqdk" path="res://Scripts/hud.gd" id="1_sd512"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_sd512")

[node name="ButtonContainer" type="HBoxContainer" parent="."]
offset_right = 1152.0
offset_bottom = 40.0
theme_override_constants/separation = 10

[node name="GameMenuBtn" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "MENU"

[node name="DeliveryBtn" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Delivery"
